Extract maps from tileworld.js, close #3. Use broswerify to create bundle.js

--- a/tileworld.html
+++ b/tileworld.html
@@ -44,6 +44,6 @@
     <div id="viewport"></div>
 </body>
  
-    <script src="tileworld.js"></script>
+    <script src="bundle.js"></script>
     <script src="player.js"></script>
 </html>
