Fixed #4 map flicker

--- a/tileworld.html
+++ b/tileworld.html
@@ -11,5 +11,5 @@
             <div id="viewport"></div>
       </body>
     <script src="bundle.js"></script>
-    <script src="player.js"></script>
+    <!--   <script src="player.js"></script>  -->
 </html>
