Add dropItem function for populating map. Add image resources.

--- a/tileworld.html
+++ b/tileworld.html
@@ -8,7 +8,12 @@
       <body>
             <div id="grid"></div>
             <div id="player"></div>
-            <div id="viewport"></div>
+            <div id="inventory">
+                <img src="images/Kerry/Sneem.png">
+                <img src="images/Kerry/tralee.png">
+                <img src="images/Kerry/Corcu_Dhuibhne.png">
+                
+            </div>
       </body>
     <script src="bundle.js"></script>
     <!--   <script src="player.js"></script>  -->
