Set-up smaller bundle. Remove unwanted files. Reassing image links. Implement ainmButton basic functionality in naContae.js.

--- a/D.html
+++ b/D.html
@@ -5,36 +5,7 @@
         <meta charset="utf-8"></meta>
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
-    <div id="mapdata">888888888808888888888888888888z.......~~~~~~~~~~
-8888888888888888888888888888z............~~~~~~~
-8888888888888888887888888888z..............~~~~~
-8888888889888888888888888888z...........*....~~~
-88888888888888888888888888z............**^...~~~
-88888888888088888888z................***^^..~~~~
-888888888888898888888z.............***.^^...~~~~
-8888888888888888888888z...........**.^^^...~~~~~
-8888888088888888888888z...........*.^^^^...~~...
-8889888888888888878888z..........**^^^^^.^......
-88888888888888888888888888z.....**.^^^^^^^......
-88z..........88..................*******^^^....~
-8z......^^^......********^............**^^....~~
-8z.....^^^^^^^****^^^^^^^^............*^^...~~~~
-z...*******88**...88^^^^^.............**...~~~~~
-z........8888888888z..^^^..............*..~~~~~~
-......8888887888z.....^^^...*******....*^..~~~~~
-888888888888888z...........**.>.^^**....*^..~~~~
-888898888888z.......*******>>>>>^^.*^...*^..~~~~
-88888888z.......****..^^^^M>>>>>M***....*^..~~~~
-88888z........***..^^MMMMMMMMMMM^*.....**^..~~~~
-88z..........**..MMMMMMMMM^^^^^***....**^^..~~~~
-88.888888...^**MMMMMMMM.********.******^^...~~~~
-8888988z...^^.**********.............^^^...~~~~~
-888888z.^^^^......................^^^.^....~~~~~
-8888z..^^....88............88....^^......~~~~~~~
-888z......8888......88888888....^.....~~~~~~~~~~
-8888888880888z....888888888.....^..~~~~~~~~~~~~~
-888889888888z...888888888........~~~~~~~~~~~~~~~
-88888888888888888887888z.......~~~~~~~~~~~~~~~~~</div>
+    <div id="mapdata"></div>
 
       <body>
             <div id="grid"></div>
