Implement language level select

--- a/naContae.html
+++ b/naContae.html
@@ -56,7 +56,10 @@
                 <p id="output2"></p>
                 <div id="inputElements">
                     <div id="imreoir"></div>
+                    <div id="imreoirWLv"></div>
                     <input id="inputName" type="text" placeholder="imreoir a h-aon" onfocus="this.placeholder = ''">
+                         <button id="imreoirLvR"><i class= "fa fa-arrow-right" aria-hidden="true"></i></button>
+                        <button id="imreoirLvL"><i class= "fa fa-arrow-left" aria-hidden="true"></i></button>
                         <button id="countyBtnRight"><i class= "fa fa-arrow-right" aria-hidden="true"></i></button>
                         <button id="countyBtnLeft"><i class= "fa fa-arrow-left" aria-hidden="true"></i></button>
                     <br>
