Bug-fix: blurb text and playerLv graphic synched with btnLv handlers

--- a/naContae.html
+++ b/naContae.html
@@ -58,8 +58,8 @@
                     <div id="imreoir"></div>
                     <div id="imreoirWLv"></div>
                     <input id="inputName" type="text" placeholder="imreoir a h-aon" onfocus="this.placeholder = ''">
-                         <button id="imreoirLvR"><i class= "fa fa-arrow-right" aria-hidden="true"></i></button>
-                        <button id="imreoirLvL"><i class= "fa fa-arrow-left" aria-hidden="true"></i></button>
+                         <button id="btnLvR"><i class= "fa fa-arrow-right" aria-hidden="true"></i></button>
+                        <button id="btnLvL"><i class= "fa fa-arrow-left" aria-hidden="true"></i></button>
                         <button id="countyBtnRight"><i class= "fa fa-arrow-right" aria-hidden="true"></i></button>
                         <button id="countyBtnLeft"><i class= "fa fa-arrow-left" aria-hidden="true"></i></button>
                     <br>
