Implement language level select before Team select.

--- a/naContae.html
+++ b/naContae.html
@@ -56,16 +56,15 @@
                 <p id="output2"></p>
                 <div id="inputElements">
                     <div id="imreoir"></div>
-                    <div id="imreoirWLv"></div>
                     <input id="inputName" type="text" placeholder="imreoir a h-aon" onfocus="this.placeholder = ''">
                          <button id="btnLvR"><i class= "fa fa-arrow-right" aria-hidden="true"></i></button>
                         <button id="btnLvL"><i class= "fa fa-arrow-left" aria-hidden="true"></i></button>
                         <button id="countyBtnRight"><i class= "fa fa-arrow-right" aria-hidden="true"></i></button>
                         <button id="countyBtnLeft"><i class= "fa fa-arrow-left" aria-hidden="true"></i></button>
-                    <br>
 
-                <br>    <div id="contae"></div>
-
+                    <div id="imreoirWLv"></div>
+                        <div id="contae"></div>
+    
                         <button id="joinTeam"><i class= "fa fa-check" aria-hidden="true"></i></button>
                     <br>
 
@@ -74,6 +73,7 @@
                 <label id= "inputLabel"><span title='is my name'>is ainm dom</span></label> 
                     <button id="ainmBtn"><i class="fa fa-check"></i></button>
                 </div>
+                        <button id="levelSelect"><i class= "fa fa-check" aria-hidden="true"></i></button>
                 <div id="mainText">  
                 </div>
 
