--- a/contaePages/naContae12.html
+++ b/contaePages/naContae12.html
@@ -6,6 +6,34 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
+~~~~~~~~~~~~~~~~..~~~~~~~~~~~~
+~~~~~~~~~~......*.~~~~~~~~~~~~
+~~~~~~~~~......**..>~~~~~~~~~~
+~~~~~~.........*...>>>~~~~~~~~
+~~~~~~.........****..>>~~~~~~~
+~~~~~~~.....>>.*..**..>>~~~~~~
+~~~~..*.....>>>>...**..>>>~~~~
+~~~~..***...>>.>>>..**...>~~~~
+~~~~~~..***....*.>>>.....>~~~~
+~~~~~.....***..*...>>>>.>~~~~~
+~~......********...^^^>>>~~~~~
+~.....***......**...^^^^>~~~~~
+.....**....~~...**...^^^>>~~~~
+~...**...~~~~~...****..^^>>~~~
+~..**..~~~~~~~~...*.***^^^>>~~
+~~~~~~~~~~~~~~~....*..****.>>~
+~~~~~~~~~~~~~~~~...**.......>>
+~~~~~~~~~~~~~~~~~...*.......>>
+~~~~~~~~~~~~~~~~~...*.......>>
+~~~~~~~~~~~~~~~~~~..*.......~>
+~~~~~~~~~~~~~~~~~~..*.....**>>
+~~~~~~~~~~~~~~~~~~..*...**..>>
+~~~~~~~~~~~~~~~~~~..*..**...>>
+~~~~~~~~~~~~~~~~~~..*..*....>>
+~~~~~~~~~~~~~~~~~~.**......~~~
+~~~~~~~~~~~~~~~~~~........~~~~
+~~~~~~~~~~~~~~~~~~.......~~~~~
+~~~~~~~~~~~~~~~~~~~.....~~~~~~
 
     
     </div>
@@ -36,7 +64,7 @@
      
             </div>
 
-                    <div id="output">Co. Aontroma</div>
+                    <div id="output">Co. Ros Comáin</div>
                     <div id="grid"></div>
                     <div id="player"></div>
                     <div id="inventory">
