--- a/contaePages/naContae16.html
+++ b/contaePages/naContae16.html
@@ -7,6 +7,32 @@
     </head>
     <div id="mapdata">
 
+module.exports.laois = `~~~~~~~~~~~~....~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~.....>>>>>>>>~~~~~~~~~~~~~~~~~~
+~~~~~~~~~^^^^.>......>>>>>>>>>~~~~~~~~~~
+~~~~~~~~~^^^^.>...............>>~~~~~~~~
+~~~~~~~~^^^^.>.*...............>~~~~~~~~
+~~~~~~~^^^.>>>.***........**...>~~~~~~~~
+~~~~~^^^^^.......*.......**....>~~~~~~~~
+~~~^^^^^^........**......*.....>~~~~~~~~
+~.^^^^^^^......******...**.....>~~~~~~~~
+~.^^^^^^^.....**....*****......>~~~~~~~~
+~..^^^^^.....**......*.........>>~~~~~~~
+~............*.......*..........>>>~~~~~
+~~.......****.......****..........>>>>>~
+~~~....***........***...*******.......>>
+~~............*****....**.....**.......>
+~..........****........*...............>
+..........**.........***........^^.^^..>
+..............~~....**.....~~....^^^^^.>
+............~~~~~........~~~~~~..^^^^^.~
+~~.........~~~~~~~......~~~~~~~~~~^^^.~~
+~~~~~.....~~~~~~~~~~..~~~~~~~~~~~~~~~~~~`;
+
+
+
+
+
     
     </div>
 
@@ -36,7 +62,7 @@
      
             </div>
 
-                    <div id="output">Co. Aontroma</div>
+                    <div id="output">Co. Laoise</div>
                     <div id="grid"></div>
                     <div id="player"></div>
                     <div id="inventory">
