--- a/contaePages/naContae17.html
+++ b/contaePages/naContae17.html
@@ -7,6 +7,31 @@
     </head>
     <div id="mapdata">
 
+~~~~~~~~~~~~~~~~~~~~~>~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~~~>>.>>>~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~>>>.....>>>~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~>...^MMM^^>>>>~~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~>..^MMMMMMMMM>>>>~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~...^MMMMMMMMMMM.>>>>>~~~~~~~~~~~~~~~~~~
+~~~~~~~~~^^^~~~~...MMMMMMMMM^MMMM...>>>>>>>>>>>>>>>~~~~
+~~~~~~~..^^^^.~~~..MMMMMM^^MMMMMM^^......***......>>>>~
+~~~~~...^^^^^^.......^^.MMMMMMMMMMM^^..***............~
+>>>>>>>...^^..........^^^MMMMMMMMMMMM..*..............~
+......>>..^^^^>>>>>>>..^^^^^^^^MMMMM^**...............~
+~.......>>>>>>>^...^>>>^^^^.......****.................
+~~.............^^^^^..>.......****....................~
+~~~.............*****.>..******....~~~~~~~...........~~
+~~~~.......******...**>>**..**...~~~~~~~~~~~~.....~~~~~
+~~~~~.....^^^^^........>>..**...~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~....^^^^^^^^.....>>.**...~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~..^^^^^^^^...>.**....~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~..^^^^^^^.>>**.....~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~.^^^***.>**......~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~.^^^^^.>.......~~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~.............~~~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~~.........~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~~~~.~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
     
     </div>
 
@@ -36,7 +61,7 @@
      
             </div>
 
-                    <div id="output">Co. Aontroma</div>
+            <div id="output">Co. Phort Láirge</div>
                     <div id="grid"></div>
                     <div id="player"></div>
                     <div id="inventory">
