--- a/contaePages/naContae19.html
+++ b/contaePages/naContae19.html
@@ -6,6 +6,35 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
+~~~~~~~~~~~~~~~~~.^^^.....~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~.^^.^^.....~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~.^^^^^......~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~.^^^^^^^....*~~~~~~~~~~~~~~~
+~~~~......~~~~~.....^^^....*.~~~~~~~~~~~~~~
+~~..^^^..**.~~~.....^^.....*..~~~~~~~~~~~~~
+~.^^^.....**...............*.........~~~~~~
+~^^^^^.....*...............*........>>..~~~
+^^^^^^.....**..............*........>....~~
+^^^^^^^^.....**............***.....>>......
+~.^^..........****...........*....>>.......
+~~...............****........*.>>>>......~~
+~~~~................**.......>>..........~~
+~~~~~~~~~~...........**>>>..>>...........~~
+~~~~~~~~~~...........>>>.>>>>*...~~~~~~~~~~
+~~~~~~~~~~..........>>.*.....*...~~~~~~~~~~
+~~~~~~~~~...........>..**....*...~~~~~~~~~~
+~~~~~~~~~>>>>>>>>>>>>...***..***..~~~~~~~~~
+~~~~~~~~~.........>>......**...**..~~~~~~~~
+~~~~~~~~.........>>........*....**.~~~~~~~~
+~~~~~..........>>..........**....**.~~~~~~~
+~~~~..........>>............*.....**..~~~~~
+~...........>>>.............**.....**..~~~~
+~..........>>.......................**.~~~~
+..........>>.....~~~~~~~~..............~~~~
+.........>>....~~~~~~~~~~.~~...........~~~~
+~.....>>>>..~~~~~~~~~~~~~~~~........~~~~~~~
+~....>>~~~~~~~~~~~~~~~~~~~~~.......~~~~~~~~
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~....~~~~~~~~~~
 
     
     </div>
@@ -36,7 +65,7 @@
      
             </div>
 
-                    <div id="output">Co. Aontroma</div>
+                    <div id="output">Co. Na Mí</div>
                     <div id="grid"></div>
                     <div id="player"></div>
                     <div id="inventory">
