--- a/contaePages/naContae21.html
+++ b/contaePages/naContae21.html
@@ -6,6 +6,36 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
+~~~~~~~~~~~~~~~~~~~^^^~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~.^^^^.~~~~~~~~~~
+~~~~~~~~~~~~~~~..^^^^^.~~~~~~~~~~
+~~~~~~~~~~~~~~...^^^^^..~~~~~~~~~
+~~~~~~~~~~~~~..^^^^^^^^.~~~~~~~~~
+~~~~~~~~~~~~...^.^^^^^^..~~~~~~~~
+~~~~~~~~~~~....^^^........~~~~~~~
+~~~~~~~~~~.................~~~~~~
+~~~~~~~~~....................~~~~
+~~~~~~~~.......................~~
+~~~~~~~..........................
+~~~~~~......................***..
+~~~~~............************...~
+~~~...**.........*.............~~
+~~.....**.......**............~~~
+~.......***...***............~~~~
+..........*****.*...........~~~~~
+>.....******.....*.........~~~~~~
+>....**..**......**.......~~~~~~~
+>....*..**........*......~~~~~~~~
+>>.**...*........**.....~~~~~~~~~
+~>.....**.......>>....~~~~~~~~~~~
+~>>....*.....>>>>>>>>~~~~~~~~~~~~
+~>>..**..>>>>>***...~~~~~~~~~~~~~
+~~>..>>>>>>>***....~~~~~~~~~~~~~~
+~~>.>>>>>~~.*...~~~~~~~~~~~~~~~~~
+~~>>>>>~....~~~~~~~~~~~~~~~~~~~~~
+~~>>~....~~~~~~~~~~~~~~~~~~~~~~~~
+~~>>..~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
 
     
     </div>
@@ -36,7 +66,7 @@
      
             </div>
 
-                    <div id="output">Co. Aontroma</div>
+                    <div id="output">Co. An Longfoirt</div>
                     <div id="grid"></div>
                     <div id="player"></div>
                     <div id="inventory">
