--- a/contaePages/naContae23.html
+++ b/contaePages/naContae23.html
@@ -9,6 +9,35 @@
 
     
     </div>
+~~~~~~~~~~~~~~~~~~~~~~~>>>>>>>~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~~~~~~>>.....>>>~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~~~~~~>>.........~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~~~~~..>.........~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~~~~...>>>>>..........~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~~...***.>>*...............~~~~~~~~~
+~~~~~~~~~~~~~~~~~...**>>>>.***..............~~~~~~~~
+~~~~~~~~~~~~~~~~~...*>>..>>..*******...........~~~~~
+~~~~~~~~~~~~~~~~~...>>....>..>>>>>>******...........
+~~~~~~~~~~~~~~~~>>>>>..*..>>>.....>>>>..****........
+~~~~~~~~~~~~~~~~.......*...>>..^^^...>>....**.......
+~~~~~~~~~~~~~~~~.......*....>>>>.^^^...>....**....~~
+~~~....~~~~~~~~......*****........^...>>.....*...~~~
+~.........~~.......***...***.....^^.>>>.....*....~~~
+~.................**.......**.^^^^..>.....***...~~~~
+~.................*......^^^*^^.....>....**....~~~~~
+~...*...................^^^^**^.....>...**....~~~~~~
+...**....................^^^^**^....>>.**....~~~~~~~
+...*....................^^^^^^***^***>>.....~~~~~~~~
+..*.....................^^^^^^^^***...>>>>..~~~~~~~~
+..*......********......^^^^.^^^**^^......>>~~~~~~~~~
+..**....**......***....^^^^^^^**.^^^^....~~~~~~~~~~~
+~..*...**.........***.......***^^^^^^..~~~~~~~~~~~~~
+~...****...~~~~......**...***.^^^^^.~~~~~~~~~~~~~~~~
+~~...*...~~~~~~~~......****^^^^.~~~~~~~~~~~~~~~~~~~~
+~~......~~~~~~~~~~~........^.~~~~~~~~~~~~~~~~~~~~~~~
+~~~...~~~~~~~~~~~~~~~.......~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~~~~~~~~..~~~~~~~~~~~~~~~~~~~~~~~~~~
+
 
       <body>
 
@@ -36,7 +65,7 @@
      
             </div>
 
-                    <div id="output">Co. Aontroma</div>
+                    <div id="output">Co. Na hIarmhí</div>
                     <div id="grid"></div>
                     <div id="player"></div>
                     <div id="inventory">
