--- a/contaePages/naContae24.html
+++ b/contaePages/naContae24.html
@@ -7,7 +7,36 @@
     </head>
     <div id="mapdata">
 
-    
+~~~~~~~~~~~~~~~~~~~.......~~~~
+~~~~~~~~~~~~~~~~...........~~~
+~~~~~~~~~~~~~~~...********..~~
+~~~~~~~~~~~~~~..**^^.....*...~
+~~~~~~~~~~~~..**^^^^.....*...~
+~~~~~~~~~~...*.^^^^^^....*....
+~~~~~~......*..^^^^^..>..**...
+..........**...^^^^..>>>.***..
+.......***.....^^....>>>.*.**.
+...****..............>>..*..*.
+.**..................>>..****.
+.*...................>>......~
+..*...................>>....~~
+..*............^^......>>>~~~~
+>>>>>>>>.......^^.........>~~~
+~~..*..>>>.....^^..........~~~
+~~~..*...>>....^^^......*...~~
+~~~~..*...>..^^^^^.....**...~~
+~~~~...*.....^^^^^^...**....~~
+~~~~~...^^....^^^^MM.**....~~~
+~~~~~...*^^.^^^^^MMM^*....~~~~
+~~~~~...*^^^^^^^MMM**..~~~~~~~
+~~~~~~...*^^^^MMMMM*..~~~~~~~~
+~~~~~~~..**^^MMMMM*..~~~~~~~~~
+~~~~~~~~~.*******...~~~~~~~~~~
+~~~~~~~~~~~~~.....~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~..~~~~~~~~~~~~
+
+
+
     </div>
 
       <body>
@@ -36,7 +65,7 @@
      
             </div>
 
-                    <div id="output">Co. Aontroma</div>
+                    <div id="output">Co. An Dúin</div>
                     <div id="grid"></div>
                     <div id="player"></div>
                     <div id="inventory">
