--- a/contaePages/naContae30.html
+++ b/contaePages/naContae30.html
@@ -6,7 +6,34 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~MM~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+888888888888888888888888z~MMMMMMMM~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+88888888888898888888888z.MMMMMMMMMMM~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+88888888888888888888888z...MMMMMMMMM.~~~~~~~~~~~~~~~~~~~~~~~~~~~
+8888888808888888880888z....^^^MMMMMMM..~~~~~~~~~~~~~~~~~~~~~~~~~
+888888888888888888888z....^^^***MMMM...~~~~~~~~.....~~~~~~~~~~~~
+88888888888888888888z..^^^^^**^****MM.........*****..~~~~~~~~~~~
+8888888888888988888z...^^^^^*^^^^^*************^^^^...~~~~~~~~~~
+888888888888888888z....^^^^^*^^^^^^^^^*.....^^^^^^^^...~~~~~~~.>
+888888888888888888z.....^^^^***^^^^^^^**....^^^^^^^^^...~~~~...>
+8888888088888888888z...~~~~...**^^^^^..**...^^^^^^^^^..........>
+888888888888888888888888888z...*..^^^...*.^^^^^^^^^............>
+888888888888888888880888788z...*.^^^^...**....^^^^^^^^........>~
+8888888888888888888888888z...***^^^^^....****...............>>>~
+8888888888888898888888z...***..^^^^^.........***...........>>~~~
+888888888888888888888z..***^^....^^......*****............>>~~~~
+88888888888888888888z.***.^^....^^^^^.****....^^^^^.......>.~~~~
+8888888988888888888z..*^^^.^^^^^^^..***.....^^^^^^^^^^...>>~~~~~
+88888888888888z.....**^^^^^^^^^^.****......^^^^^^^^^^...>>~~~~~~
+8888888888888z....***^^^^^^^^^^***........^^^^^^^^^^^^.>>~~~~~~~
+888888888888z....**^^^^^^^^^^.**.....>>....^^^^^^^^...>>~~~~~~~~
+88888878888z...***^^^^^^^^^.***.....>>>>>...^^^^^^^.>>~~~~~~~~~~
+88888888z.......^***...^^^***.....>>~~~~>>>.^^^^^^>>>~~~~~~~~~~~
+88888z.............********....>>>>~~~~~~~>>>>>>>>~~~~~~~~~~~~~~
+8888z.............~~.........>>>~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+88z..........~~~~~~~~~.....~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+8z.........~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+8z.......~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     
     </div>
 
@@ -36,7 +63,7 @@
      
             </div>
 
-                    <div id="output">Co. Aontroma</div>
+                    <div id="output">Co. An Chláir</div>
                     <div id="grid"></div>
                     <div id="player"></div>
                     <div id="inventory">
