--- a/contaePages/naContae20.html
+++ b/contaePages/naContae20.html
@@ -7,6 +7,38 @@
     </head>
     <div id="mapdata">
 
+888888888808888888888888888888z.......~~~~~~~~~~
+8888888888888888888888888888z............~~~~~~~
+8888888888888888887888888888z..............~~~~~
+8888888889888888888888888888z...........*....~~~
+88888888888888888888888888z............**^...~~~
+88888888888088888888z................***^^..~~~~
+888888888888898888888z.............***.^^...~~~~
+8888888888888888888888z...........**.^^^...~~~~~
+8888888088888888888888z...........*.^^^^...~~...
+8889888888888888878888z..........**^^^^^.^......
+88888888888888888888888888z.....**.^^^^^^^......
+88z..........88..................*******^^^....~
+8z......^^^......********^............**^^....~~
+8z.....^^^^^^^****^^^^^^^^............*^^...~~~~
+z...*******88**...88^^^^^.............**...~~~~~
+z........8888888888z..^^^..............*..~~~~~~
+......8888887888z.....^^^...*******....*^..~~~~~
+888888888888888z...........**.>.^^**....*^..~~~~
+888898888888z.......*******>>>>>^^.*^...*^..~~~~
+88888888z.......****..^^^^M>>>>>M***....*^..~~~~
+88888z........***..^^MMMMMMMMMMM^*.....**^..~~~~
+88z..........**..MMMMMMMMM^^^^^***....**^^..~~~~
+88.888888...^**MMMMMMMM.********.******^^...~~~~
+8888988z...^^.**********.............^^^...~~~~~
+888888z.^^^^......................^^^.^....~~~~~
+8888z..^^....88............88....^^......~~~~~~~
+888z......8888......88888888....^.....~~~~~~~~~~
+8888888880888z....888888888.....^..~~~~~~~~~~~~~
+888889888888z...888888888........~~~~~~~~~~~~~~~
+88888888888888888887888z.......~~~~~~~~~~~~~~~~~
+
+
     
     </div>
 
@@ -36,7 +68,7 @@
      
             </div>
 
-                    <div id="output">Co. Aontroma</div>
+                    <div id="output">Co. Chiarraí</div>
                     <div id="grid"></div>
                     <div id="player"></div>
                     <div id="inventory">
