--- a/contaePages/naContae26.html
+++ b/contaePages/naContae26.html
@@ -6,8 +6,38 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
+~~~~~~~~~~~~~~~~~~~~.............~~~~~~~~~
+~~~~~~~~~~~~~~~~~~~..................~~~~~
+~~~~~~~~~~~~~~~~~~.......*******.......~~~
+~~~~~~~~~~~~~~~~~.......**......**.......~
+~~~~~~~~~~~~~~~~.......**........***......
+~~......~~~~>~~.**....**...........**.....
+~........~~~>~.***....*.............**....
+~.........>>>..*.*....*........~~....**...
+~........>>...*..*...*........~~~~........
+........>>..**...*...*.......~~~~~~......~
+.......>>..**...**..**.......~~~~~~.....~~
+.......>..*.....**.**.......~~~~~~~~.~~~~~
+.......>.**......***.......~~~~~~~~~~~~~~~
+~......>**.......**......*~~~~~~~~~~~~~~~~
+~~....>>*.........**....**.~~~~~~~~~~~~~~~
+~~~...>.*..........*..**....~~~~~~~~~~~~~~
+~~~~..>>*..........****.....~~~~~~~~~~~~~~
+~~~~~~.>**..................~~~~~~~~~~~~~~
+~~~~~~~.>*..................~~~~~~~~~~~~~~
+~~~~~~~~>>*.................~~~~~~~~~~~~~~
+~~~~~~~~~>**....^^^^..^...~~~~~~~~~~~~~~~~
+~~~~~~~~~~>**...^^^^^^^.~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~>>**..^^^^^^.~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~>.***.^^^^^.~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~>>..*.^^^^.~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~>>.**^^^..~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~>..*^^^..~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~>>.*^^^.~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~>.*^^.~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~>>...~~~~~~~~~~~~~~~~~~~~~~~`;
 
-    
+
     </div>
 
       <body>
@@ -36,7 +66,7 @@
      
             </div>
 
-                    <div id="output">Co. Aontroma</div>
+                    <div id="output">Co. Cheatharlach</div>
                     <div id="grid"></div>
                     <div id="player"></div>
                     <div id="inventory">
