--- a/contaePages/naContae28.html
+++ b/contaePages/naContae28.html
@@ -6,8 +6,35 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-
-    
+888888888888888~~~~~~~~~~~~~~~~~~~~~~~~~~~~~..~~~~~~~~~~~~~~~~~
+8888888888888888z.......~~~~~~~~~~~~~~~~~~.......~~~~~~~~~~~~~~
+8888888888z.....^^^^^^.....~~~~~~~~~~~.............~~~~~~~~~~~~
+888888z.........^^^^^^^^..>.~~~~~~~.................~~~~~~~~~~~
+88888z...^^^^^^********..>>.~~~~~~...................~~~~~~~~~~
+888z..^^^*******^^^...*>>>...~~~~.....................~~~~~~~~~
+8z..^^^***^MMMMM>>>>>>>>>>>>>>>.............**........~~~~~~~~~
+~...^^**^MMMM>>>>>>>>>>>>>>>>>...*........***.........~~~~~~~~~
+....********MMMMM^^^^*^.>>>>>....*.......**...........~~~~~~~~~
+...........***********^...>>>>...**.....**......**....~~~~~~~~~
+888888888z....^^.^^***^^..>>>>>...**....*....****.....~~~~~~~~~
+888888z.......^^..^^^******...>>...***..*...**.......~~~~~~~~~~
+8888z.....^^^^^.^^^^^^^^^.***..>>>>..*..*..**........~~~~~~~~~~
+888z......^^^^^.^^^^^^.^....***.....**..*.**........~~~~~~~~~~~
+88z....88z.......^^^^^^^^^....*******.****..........~~~~~~~~~~~
+888888888z........^^^^^^^...........***..............~~~~~~~~~~
+88888888z...........................*...................~~~~~~~
+8888888z....88......................****...................~~~~
+8888888z~...8888............8888.......*****...........**....~~
+8888z.888888888888..........88888..........*************......~
+8888z...~~8888888888888888888888..............***.............>
+8888z.^...8888888888888888z.............^^^^^^^^^*..........>>>
+8888z.^^..8888888888888z................^^^^^^^^^*........>>>~~
+88888z.^^.8888888888888z...8............^^^^^^^.**.......>>~~~~
+888888z...8888888888888888z...............^^^^^.*.>>>>>>>>~~~~~
+8888888888888888888888888z....8~~~~........^^.^**.>~~~~~~~~~~~~
+8888888888888888888888888888888~~~~~~~......^^**..~~~~~~~~~~~~~
+888888888888888888888888888888~~~~~~~~~~...^^*^..~~~~~~~~~~~~~~
+888888888888888888888888888888~~~~~~~~~~~~...*.~~~~~~~~~~~~~~~~
     </div>
 
       <body>
@@ -36,7 +63,7 @@
      
             </div>
 
-                    <div id="output">Co. Aontroma</div>
+                    <div id="output">Co. Na Gaillimhe</div>
                     <div id="grid"></div>
                     <div id="player"></div>
                     <div id="inventory">
