--- a/contaePages/naContae32.html
+++ b/contaePages/naContae32.html
@@ -7,7 +7,33 @@
     </head>
     <div id="mapdata">
 
-    
+~~~~~~~~~~~~~~~~~~~~........~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~..***......^^^.~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~...*.........^^^^.~~~~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~..*.............^^.~~~~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~...*...........^^.^^^..~~~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~..**...........^.^^^^MMM.~~~~~~~~~~~~~~~~~~~~~
+~~~~~~~~~~~~~...**............^^^^MMMMMM.MMMM...~~~~~~~~~~~~~
+~~~~~~~~~.....***............^^^.MMMMMMMMMMMMM..~~~~~~~~~~~~~
+~~~~..........**..............^^^MMMMMMMMMMMM...~~~~~~~~~~~~~
+...............***............^.^^MMMMMMM.......~~~~~~~~~~~~~
+.^^^^^^..........**............^^^^M^MMM......~~~~~~~~~~~~~~~
+..^^^^^...........**...........^^^^M^MM.....*~~~~~~~~~~~~~~~~
+~~~..^^^............*...........^^.^^MM....*...~~~~~~~~~~~~~~
+~~~~~.^^^^..........**.........^^^^^^......*........~~~~~~...
+~~~~~~~.^^^........****......^.^^^^.^.....**.........~.......
+~~~~~~~~~~.........*..*......^..^^..^....**..................
+~~~~~~~~~~~~......**..**.....^...^^^^....***...............>~
+~~~~~~~~~~......***....**...^^...^^........***............>>~
+~~~~~~~~~....****.......**..^^...............**...........>~~
+~~~~~~~~~.****...........***^...........********.........~~~~
+~~~~~~~~~...^^^^^^^^.^^^^^^******.....***......*.....~~~~~~~~
+~~~~~~~~~...^^^.^^^^^^^^^^^^^^..*******......***...~~~~~~~~~~
+~~~~~~~~~....~~~~~~.^^^.^^^^^^^...................~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~~~~.^MM^^^^^^^^^^^...............~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~~~~~.MMMM^^^^^...................~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~~~~~~.MMMMM^^^..~~~~~..........~~~~~~~~~~~~~
+~~~~~~~~~~~~~~~~~~~~~~~~.^^^^..~~~~~~~~~......~~~~~~~~~~~~~~~
     </div>
 
       <body>
@@ -36,7 +62,7 @@
      
             </div>
 
-                    <div id="output">Co. Aontroma</div>
+                    <div id="output">Co. Thír Éoghain</div>
                     <div id="grid"></div>
                     <div id="player"></div>
                     <div id="inventory">
