--- a/contaePages/naContae34.html
+++ b/contaePages/naContae34.html
@@ -6,6 +6,37 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
+~~~~~~~~~~~.....~~~~~~~~~
+~~~~~~~~~~~.........~~~~~
+~~~~~~~~~~......*...~~~~~
+~~~~~~~~~..^^...*....~~~~
+~~~~..^^^^^^^...*....~~~~
+......^^^^^^^...*....~~~~
+......^^^^^^^...**.....~~
+...........^^^...***....~
+...................*.....
+~..................*.....
+~~~...............**.....
+~~~~~...........***......
+~~~~~~~.........*........
+~~~~~~~~........*........
+~~~~~~~~~~......**..>>>>>
+~~~~~~~.........>>>>>...~
+~~~~~.........>>>*......~
+~~~>>........>>..*.....~~
+~...>>>>..>>>>...*....~~~
+~......>>>>.........~~~~~
+~.................~~~~~~~
+~~...............~~~~~~~~
+~~...............~~~~~~~~
+~~...............~~~~~~~~
+~~..^^^^..........~~~~~~~
+~~~.^^^^^^^^.......~~~~~~
+~~~.^^^^^^^^^.......~~~~~
+~~~..^^^^^^^^^^......~~~~
+~~~~.^^^^^^^^^^^^......~~
+~~~~~~~~.^^^^^^^^^^.....~
+
 
     
     </div>
@@ -36,7 +67,7 @@
      
             </div>
 
-                    <div id="output">Co. Aontroma</div>
+                    <div id="output">Co. Átha Cliath</div>
                     <div id="grid"></div>
                     <div id="player"></div>
                     <div id="inventory">
