Simplify code. Make interface easier to modify.

--- a/contaePages/naContae33.html
+++ b/contaePages/naContae33.html
@@ -67,7 +67,7 @@
      
             </div>
 
-                    <div id="output">Co. Átha Cliath</div>
+                    <div id="output">...</div>
                     <div id="grid"></div>
                     <div id="player"></div>
                     <div id="inventory">
