--- a/naContae.html
+++ b/naContae.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
 
     <head>
-        <title>Roghnaigh Contae</title>
+        <title>3ire 3ile</title>
         <link rel="stylesheet" href="naContae.css">
         <link rel="stylesheet" href="../../font-awesome-4.7.0/css/font-awesome.min.css">
         <script src="../jquery-1.4.js"></script>
@@ -17,85 +17,50 @@
         <audio id='abattoir' loop>
             <source src="../../audio/abattoir.mp3">
         </audio>
-        <div class="parent">
 
-            <div class="item">
 
                 <div id="left-panel">
-                    <h1 id="title"></h1>
-                    <h1 id="alt-title" title="back">Síar</h1>
                     <img src="" width="300" height="267" id="location">
                     <div id="shield-holder">
-
-
                         <button id="play"><i class= "fa fa-check" aria-hidden="true"></i></button>
-
-
                         <div class="item" id="dealbh">
                             <div class="item" id="badge"</div>
-
                             <p id="bearla">Hover on Irish text for English</p>
-                        </div>
-
-
-
-                    </div>
-
+                       </div>
+                   </div>
                 </div>
-            </div>
-
-        </div>
-        <div class="item">
             <div id="middle-panel">
 
 
-                <div id="countyMain"></div>
-                <p id="output">
-                </p>
-
+                <p id="output"></p>
                 <p id="output2"></p>
-                <div id="inputElements">
-                    <div id="imreoir"></div>
+                <div id="countyMain"></div>
                     <input id="inputName" type="text" placeholder="imreoir a h-aon" onfocus="this.placeholder = ''">
-                         <button id="btnLvR"><i class= "fa fa-arrow-right" aria-hidden="true"></i></button>
+                    <br/>
+                <label id= "inputLabel"><span title='is my name'>is ainm dom</span></label> 
+                <br/><button id="ainmBtn"><i class="fa fa-check"></i></button>
+                <div id="inputElements">
+                        <button id="btnLvR"><i class= "fa fa-arrow-right" aria-hidden="true"></i></button>
                         <button id="btnLvL"><i class= "fa fa-arrow-left" aria-hidden="true"></i></button>
                         <button id="countyBtnRight"><i class= "fa fa-arrow-right" aria-hidden="true"></i></button>
                         <button id="countyBtnLeft"><i class= "fa fa-arrow-left" aria-hidden="true"></i></button>
 
                     <div id="imreoirWLv"></div>
-                        <div id="contae"></div>
     
+                        <button id="levelSelect"><i class= "fa fa-check" aria-hidden="true"></i></button>
                         <button id="joinTeam"><i class= "fa fa-check" aria-hidden="true"></i></button>
                     <br>
 
-
-                <div id="curSiosArCo"></div>
-                <label id= "inputLabel"><span title='is my name'>is ainm dom</span></label> 
-                    <button id="ainmBtn"><i class="fa fa-check"></i></button>
                 </div>
-                        <button id="levelSelect"><i class= "fa fa-check" aria-hidden="true"></i></button>
+                        <div id="contae"></div>
                 <div id="mainText">  
                 </div>
 
 
-                <!-- TILEWORLD   -->
-
-                <div id="tileworld">
-                    <div id="mapdata"></div>            
-                    <div id="grid"></div>
-                    <div id="player"></div>
-
-                    <div id="inventory">
-                        <img src="../../images/Skibbereen.png">
-                    </div>
-                </div>
-
             </div>
 
 
-        </div>
 
-        </div>
 
 
     </body>
