Rearrange elements with css. Identify bug: no moving water on game-maps.

--- a/contaePages/naContae9.html
+++ b/contaePages/naContae9.html
@@ -10,29 +10,29 @@
 ~~~~~~~~~~..................~~~~~~~~~~~~~~~~~~~~~~~~~~
 ~~~~~.............................~~~~~~~~~~~~~~~~~~~~
 ~~~~~.....**************..........~~~~~~~~~~~~~~~~~~~~
-~......****..>>>>>>....*..........~~~~~~~~~~~~~~~~~~~~
-~...****.>>>>>>>>>>>...*.........~~~~~~~~~~~~~~~~~~~~~
-.......***.>>>>>>>>>...**......~~~~~~~~~~~~~~~~~~~~~~~
-..........***..>>>>>>...*.....~~~~~~~~~~....~~~~~~~~~~
-~....^^^^...**..>>>>>>>..*.....~~~~~~~~.......~~~~~~~~
-~~....^^^^...**..>>>>>>>.*.....................~~~~~~~
-~~~.....^^^...**..>>>>>>.*......................~~~~~~
-~~~>>..^^^^^...****......*.......................~~~~~
-~~~~>>...^^^^^^...********..........................~~
-~~~~~>>...^^^^^^.........*............................
-~~~~~~>>>....^^^^^^......*.............*..............
-~~~~~~~~>>>>..^^^^^^.....*.............*..............
-~~~~~~~~~~~>>>..^^^^^^...**********....*......^^^^^..~
-~~~~~~~~~~~~~>>..**^^....*..>>>...**...*.....^^^^^.~~~
-~~~~~~~~~~~~~~>>>^**^^^^.**.>>>>>>.*****....^^^^^^^.~~
-~~~~~~~~~~~~~~~~>>.^**^^^.*.>>>>>>>.**......^^^^^^^.~~
-~~~~~~~~~~~~~~~~~>.^^*******.>>>>>>>.**....^^..^^^..~~
-~~~~~~~~~~~~~~~~~>..^^^^^*^***>>>.>.>.**............~~
-~~~~~~~~~~~~~~~~~>..^^^^^*^^.**.>>>>>..*...........~~~
-~~~~~~~~~~~~~~~~~>...^^^^*^^^.**********.........~~~~~
-~~~~~~~~~~~~~~~~~>>>>....*.^^^.......*..........~~~~~~
-~~~~~~~~~~~~~~~~~~~~>>>..*...........*........~~~~~~~~
-~~~~~~~~~~~~~~~~~~~~~~>>.*.................~~~~~~~~~~~
+~......****..rrrrrr....*..........~~~~~~~~~~~~~~~~~~~~
+~...****.rrrrrrrrrrr...*.........~~~~~~~~~~~~~~~~~~~~~
+.......***.rrrrrrrrr...**......~~~~~~~~~~~~~~~~~~~~~~~
+..........***..rrrrrr...*.....~~~~~~~~~~....~~~~~~~~~~
+~....^^^^...**..rrrrrrr..*.....~~~~~~~~.......~~~~~~~~
+~~....^^^^...**..rrrrrrr.*.....................~~~~~~~
+~~~.....^^^...**..rrrrrr.*......................~~~~~~
+~~~rr..^^^^^...****......*.......................~~~~~
+~~~~rr...^^^^^^...********..........................~~
+~~~~~rr...^^^^^^.........*............................
+~~~~~~rrr....^^^^^^......*.............*..............
+~~~~~~~~rrrr..^^^^^^.....*.............*..............
+~~~~~~~~~~~rrr..^^^^^^...**********....*......^^^^^..~
+~~~~~~~~~~~~~rr..**^^....*..rrr...**...*.....^^^^^.~~~
+~~~~~~~~~~~~~~rrr^**^^^^.**.rrrrrr.*****....^^^^^^^.~~
+~~~~~~~~~~~~~~~~rr.^**^^^.*.rrrrrrr.**......^^^^^^^.~~
+~~~~~~~~~~~~~~~~~r.^^*******.rrrrrrr.**....^^..^^^..~~
+~~~~~~~~~~~~~~~~~r..^^^^^*^***rrr.r.r.**............~~
+~~~~~~~~~~~~~~~~~r..^^^^^*^^.**.rrrrr..*...........~~~
+~~~~~~~~~~~~~~~~~r...^^^^*^^^.**********.........~~~~~
+~~~~~~~~~~~~~~~~~rrrr....*.^^^.......*..........~~~~~~
+~~~~~~~~~~~~~~~~~~~~rrr..*...........*........~~~~~~~~
+~~~~~~~~~~~~~~~~~~~~~~rr.*.................~~~~~~~~~~~
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~..............~~~~~~~~~~~~~
 
 
